Display: Fix icons visibility in extra fields table, add ch-tool-icon-success, ch-tool-icon-secondary and ch-tool-icon-danger styles for action icons in legacy code

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -182,8 +182,14 @@
   .ch-toolbar-icon {
     @apply font-extrabold text-primary leading-none;
   }
+  .ch-tool-icon-secondary {
+    @apply font-extrabold text-secondary;
+  }
   .ch-tool-icon-success {
     @apply font-extrabold text-success;
+  }
+  .ch-tool-icon-danger {
+    @apply font-extrabold text-danger;
   }
   .ch-tool-icon-disabled {
     @apply font-extrabold text-gray-50;
